[tool.poetry]
name = "ethofier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
telegram = "^0.0.1"
python-telegram-bot = "^12.3"
pymongo = "^3.10"
apscheduler = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
